set iam and dynamodb
