# templates/swagger.yaml
@@ -9,7 +9,6 @@ info:
   license:
     name: "MIT License"
     url: "https://github.com/codeforjapan/remote-patient-monitoring-api/blob/main/LICENSE"
-basePath: "/v1"
 
 produces:
   - application/json
@@ -18,19 +17,66 @@ consumes:
   - application/json
 
 paths:
-  /api/center/{centerId}:
+  /api/center/:
     get:
-      summary: "保健所ID"
+      summary: get centers.
+      description: get all centers.
+      tags:
+        - center
+      responses:
+        200:
+          description: OK
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/produceCenterModel"
+        400:
+          description: Bad Request
+          schema:
+            $ref: "#/definitions/error"
       x-amazon-apigateway-integration:
         type: aws_proxy
         responses:
           default:
             statusCode: "200"
-        uri: "arn:aws:apigateway:#{AWS::Region}:lambda:path/2015-03-31/functions/arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:remote-patient-monitoring-getCenter-dev/invocations"
-        passthroughBehavior: "when_no_match"
+        uri: "arn:aws:apigateway:#{AWS::Region}:lambda:path/2015-03-31/functions/arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:remote-patient-monitoring-getCenters-dev/invocations"
         httpMethod: "POST"
         contentHandling: "CONVERT_TO_TEXT"
+    post:
+      summary: Create a new center.
+      description: Create a new center.
+      tags:
+        - center
+      parameters:
+        - in: body
+          schema:
+            $ref: "#/definitions/consumeCenterModel"
+          name: centerModel
+          description: center model which you want to create.
+          required: true
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: "#/definitions/produceCenterModel"
+        400:
+          description: Bad Request
+          schema:
+            $ref: "#/definitions/error"
+      x-amazon-apigateway-integration:
+        type: aws_proxy
+        responses:
+          default:
+            statusCode: "200"
+        uri: "arn:aws:apigateway:#{AWS::Region}:lambda:path/2015-03-31/functions/arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:remote-patient-monitoring-postCenter-dev/invocations"
+        httpMethod: "POST"
+        contentHandling: "CONVERT_TO_TEXT"
+  /api/center/{centerId}:
+    get:
+      summary: "保健所ID"
       description: "指定されたcenterIdの保健所情報を返します"
+      tags:
+        - center
       parameters:
         - name: "centerId"
           in: "path"
@@ -42,18 +88,60 @@ paths:
         200:
           description: "成功時のレスポンス"
           schema:
-            $ref: "#/definitions/Center"
+            $ref: "#/definitions/produceCenterModel"
         404:
           description: Not Found
           schema:
             $ref: "#/definitions/error"
+      x-amazon-apigateway-integration:
+        type: aws_proxy
+        responses:
+          default:
+            statusCode: "200"
+        uri: "arn:aws:apigateway:#{AWS::Region}:lambda:path/2015-03-31/functions/arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:remote-patient-monitoring-getCenter-dev/invocations"
+        passthroughBehavior: "when_no_match"
+        httpMethod: "POST"
+        contentHandling: "CONVERT_TO_TEXT"
+    put:
+      summary: "保健所の更新"
+      description: "指定されたcenterIdの保健所情報を更新します"
+      tags:
+        - center
+      parameters:
+        - name: "centerId"
+          in: "path"
+          description: "更新したい保健所のID"
+          required: true
+          type: "integer"
+          format: "int64"
+        - in: body
+          schema:
+            $ref: "#/definitions/consumeCenterModel"
+          name: centerModel
+          description: center model which you want to update.
+          required: true
+      responses:
+        200:
+          description: "成功時のレスポンス"
+          schema:
+            $ref: "#/definitions/produceCenterModel"
+        404:
+          description: Not Found
+          schema:
+            $ref: "#/definitions/error"
+      x-amazon-apigateway-integration:
+        type: aws_proxy
+        responses:
+          default:
+            statusCode: "200"
+        uri: "arn:aws:apigateway:#{AWS::Region}:lambda:path/2015-03-31/functions/arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:remote-patient-monitoring-putCenter-dev/invocations"
+        passthroughBehavior: "when_no_match"
+        httpMethod: "POST"
+        contentHandling: "CONVERT_TO_TEXT"
 definitions:
-  Center:
+  consumeCenterModel:
     type: "object"
     properties:
-      id:
-        type: "integer"
-        format: "int64"
       name:
         type: "string"
   error:
@@ -62,4 +150,12 @@ definitions:
       errorCode:
         type: "string"
       errorMessage:
+        type: "string"
+  produceCenterModel:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      name:
         type: "string"
